--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r ./build/* itd@158.160.0.133:/home/itd/movies-explorer-frontend"
+    "deploy": "npm run build && scp -r ./build/* root@62.113.111.216:/root/frontend"
   },
   "eslintConfig": {
     "extends": [
